--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">THE BLOG</a>
+      <%= link_to "THE BLOG", posts_index_path,:class => "navbar-brand" %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"  aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,10 +20,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <%= link_to "Home", posts_index_path,:class => "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Admin</a>
+            <%= link_to "Admin", posts_dashboard_path,:class => "nav-link" %>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
