image tag climbers

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 <div class="card my-4" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="..." class="card-img" alt="...">
+      <%= image_tag "post1.jpeg", class:"card-img pt-4 pl-1" , alt:"escaladores"%>
     </div>
     <div class="col-md-8">
       <div class="card-body">
