create a admin form

--- a/app/views/posts/dashboard.html.erb
+++ b/app/views/posts/dashboard.html.erb
@@ -1,2 +1,5 @@
-<h1>Posts#dashboard</h1>
-<p>Find me in app/views/posts/dashboard.html.erb</p>
+<%= form_with(model: @post, url: posts_create_path,local: true) do |f|%>
+    <%=f.label:title%>
+    <%=f.text_field :title%>
+    <%=f.submit%>
+<%end%>
