--- a/app/views/posts/dashboard.html.erb
+++ b/app/views/posts/dashboard.html.erb
@@ -1,12 +1,19 @@
-<%= form_with(model: @post, url: posts_create_path,local: true) do |f|%>
-    <div>
-        <%=f.label:title%>
-        <%=f.text_field :title, placeholder: 'Título del post'%>
-    </div>
-    
-    <div>
-        <%=f.label:Contenido%>
-        <%=f.text_field :content, placeholder: 'Agregue contenido'%>
-    </div>
-    <%=f.submit%>
-<%end%>
+<div class="form-group mt-3" id="create_posts">
+    <%= form_with(model: @post, url: posts_create_path,local: true) do |f|%>
+        <div class="mt-2">
+            <%=f.label:title, class:'form-label' %>
+            <%=f.text_field :title, placeholder: 'Título del post', class:'form-control'%>
+        </div>
+
+        <div class="mt-2">
+            <%=f.label:Post, class:'form-label'%>
+            <%=f.text_area :comment, placeholder: 'Agregue contenido', size: "70x5", class:'form-control'%>
+        </div>
+
+        <div class="mt-2">
+            <%=f.label 'URL', class:'form-label'%>
+            <%=f.text_field :url, placeholder: 'Agregue url imagen',class:'form-control'%>
+        </div>
+        <%=f.submit class:'mt-3 btn btn-primary'%>
+    <%end%>
+</div>
