modify url column type

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,18 @@
 
-<div class="card my-4" style="max-width: 540px;">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <%= image_tag "post1.jpeg", class:"card-img pt-4 pl-1" , alt:"escaladores"%>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Este es el primer post</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Fecha de ingreso</small><button type="button" class="btn btn-info ml-5">view more</button></p>
+<%@posts.each do |p|%>
+  <div class="card my-4" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="<%= p.title%>" alt="imagen" class="card-img pt-4 pl-1">
+        
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title"><%= p.title%></h5>
+          <p class="card-text"><%= p.comment%></p>
+          <p class="card-text"><small class="text-muted"><%= p.created_at.to_time.strftime('%B %e at %l:%M %p')%></small></p>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
+<%end%>
