change gemfile and access key

--- a/app/views/posts/dashboard.html.erb
+++ b/app/views/posts/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group mt-3" id="create_posts">
+<div class="form-group mt-5 pt-4" id="create_posts">
     <%= form_with(model: @post, url: posts_create_path,local: true) do |f|%>
         <div class="mt-2">
             <%=f.label:title, class:'form-label' %>
